# sp-base

./: .gitignore  README.md  setup.cfg  test  test2
docs/: Main.md  Todo.md  projectSeperation.md  thought.md  vscode-kanban.json
docs/Algorithms/: Algor-genre.md  Algor-mix.md
docs/Tests/: testCases.md
docs/db/: File_Structure.md  README.md  dataProcessing.md  db.md  gp.md  playlist.md  sample_config.yml
docs/project/: docker.md  example.md  programWorkflow  ~$programWorkflow.bkp
docs/testCase/: testCases.md
src/conf/: configRW.py  db.py  dbUsers.py  sample_config.yml
src/connect/: dbSongs.py  spFetch.py  spPush.py  spprams_sample.py  test_spFetch.py
src/creator/: SPA_VS.code-workspace  dbCreator.py  mix.py  test_mix.py
src/fetch/: spFetch.py
src/test/improper/: spot2.py
src/tests/: test_configRW.py
src/tests/improper/: config.py  spot2.py
src/tests/sqlTesting/: configs.py  strings.py
