[metadata]
name = sp-base-neopect
version = 0.0.1
author = Tyler Moen
author_email = tyler.moen@earthlink.net
description = A fetch program to fetch spotify data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Neopect/sp-base/
project_urls =
    Bug Tracker = https://github.com/Neopect/sp-base/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src